<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sf_login_screen"
        android:tint="#7759" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/log_in_title"
                    android:textColor="@color/neutral_white"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lnr_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:padding="20dp">



                        <EditText
                            android:id="@+id/et_user"
                            style="@style/editTextLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/log_in_username_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />





                        <EditText
                            android:id="@+id/et_pass"
                            style="@style/editTextLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/log_in_password_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true" />


                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:onClick="heWeGo"
                        android:background="@color/btn_enabled"
                        android:text="@string/log_in_button_title"
                        android:textAllCaps="false"
                        android:textColor="@color/neutral_white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="120dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_enroll_now"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="10dp"
                            android:layout_toStartOf="@+id/view"
                            android:gravity="right"
                            android:text="@string/log_in_enroll_now"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="1dp"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_continue_as_guest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:layout_toEndOf="@+id/view"
                            android:gravity="left"
                            android:text="@string/log_in_help"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</FrameLayout>